# claude-code-session-explorer

./: .gitignore  API.md  CLAUDE.md  README.md  config.example.toml  pyproject.toml
docs/: opencode-data-model.md
prompts/: gui-commands.md
src/claude_code_live/: __init__.py  rendering.py  server.py  sessions.py  tailer.py
src/claude_code_live/static/: script.js  style.css
src/claude_code_live/templates/: live.html
src/claude_code_session_explorer/: __init__.py  broadcasting.py  config.py  export.py  models.py  permissions.py  server.py  sessions.py
src/claude_code_session_explorer/backends/: CLAUDE.md  README.md  __init__.py  multi.py  protocol.py  registry.py  thinking.py
src/claude_code_session_explorer/backends/claude_code/: backend.py  cli.py  discovery.py  renderer.py
src/claude_code_session_explorer/backends/opencode/: backend.py  cli.py  discovery.py  pricing.py  renderer.py
src/claude_code_session_explorer/routes/: __init__.py  archives.py  files.py  sessions.py
src/claude_code_session_explorer/static/: style.css
src/claude_code_session_explorer/summarizer/: generator.py
src/claude_code_session_explorer/templates/: CLAUDE.md  live.html  macros.html
src/claude_code_session_explorer/templates/export/: base.html  index.html  page.html  styles.css
src/vibedeck/: __init__.py  broadcasting.py  export.py  models.py  pricing.yaml  search.py  server.py  sessions.py  terminal.py
src/vibedeck/backends/: base.py  multi.py  protocol.py
src/vibedeck/backends/claude_code/: backend.py  renderer.py
src/vibedeck/backends/isolation/: containers.py
src/vibedeck/backends/opencode/: backend.py  tailer.py
src/vibedeck/backends/shared/: normalizer.py
src/vibedeck/routes/: __init__.py  archives.py  diff.py  files.py  sessions.py  statuses.py
src/vibedeck/static/: script.js  style.css
src/vibedeck/summarizer/: config.py
src/vibedeck/templates/: live.html
src/vibedeck/templates/export/: base.html
tests/: test_base_path.py  test_config.py  test_discovery.py  test_export.py  test_isolation_containers.py  test_json_sse.py  test_normalizer.py  test_opencode_backend.py  test_permissions.py  test_rendering.py  test_server.py  test_sessions.py  test_tailer.py  test_terminal.py  test_thinking.py
(+30 files in other folders)
