[project]
name = "claude-code-session-explorer"
version = "0.1.0"
description = "Live-updating transcript viewer for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Tijs + Claude" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=2.0.0",
    "watchfiles>=0.21.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "click>=8.1.0",
    "click-default-group>=1.2.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
]

[project.scripts]
claude-code-session-explorer = "claude_code_session_explorer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_session_explorer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
